2008-08-24  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerservice.py.in
	(PokerServiceTestCase.test00_3_configValues): Wrote test.
	(PokerServiceTestCase.configValues): Added arg and check for
	missed_round_max.

	* pokernetwork/pokerservice.py (PokerService.getMissedRoundMax):
	Wrote method.

	* conf/poker.server.xml.in: Added max_missed_round setting, for
	server-wide and table One.

	* pokernetwork/pokerservice.py (PokerService.__init__): Added
	missed_round_max setting from the /server/@max_missed_round.

2008-08-23  Loic Dachary <loic@dachary.org>

 	* Release 1.7.0

	* tests/testmessages.py: fix broken verbose mode (using what
	  variable instead of string variable)
	* tests/test-protocol.py.in: add GetPlaces packets
	* tests/test-pokertable.py.in: mockup eventTable and
	  updateTableStats
	* tests/test-pokersite.py.in: mockup getPlayerPlaces
	* tests/test-pokerservice.py.in: . destroy db on teardown (was
	  commented out)
	  . implement PlayerPlacesTestCase to test GetPlaces
	  . implement ResthostTestCase to test all functions related to the
	  update of the resthost table
	* tests/test-pokerclient.py.in: . do not force verbosity to 6
	  . run PokerClientFactoryTestCase (previously commented out by
	  accident)
	* tests/test-pokeravatar.py.in: add test70_poll and
	  test69_getPlayerPlaces
	* tests/Makefile.am: add test-proxyfilter.py to the list of tests
	* pokernetwork/pokertable.py: . the eventTable of PokerService is
	  notified whenever a packet is sent to the players so that the
	  last modified date of the routes are updated
	  . when a turn finishes, the updateTableStats function of
	  PokerService is called to update the stats fields of the
	  pokertables to reflect the new PokerGame values
	* pokernetwork/pokersite.py: . pipesFailed and deferRender:
	  Report only if the request has not been finished already.
	  It is the responsibility of each filter to handle errors
	  either by passing them on the errback chain or by filling